# qlbm

./: .envrc  .gitignore  BoundaryConditions2D.ipynb  CLAUDE.md  DiagonalGateTest.ipynb  Experiment.ipynb  Experiment1D.ipynb  Experiment2D.ipynb  Experiment2DCross.ipynb  Experiment3D.ipynb  ExperimentCollisionPrecision.ipynb  ExperimentControlled.ipynb  ExperimentLCU.ipynb  ExperimentQST.ipynb  ExperimentTemplate.ipynb  ExperimentTranspilation.ipynb  MatrixAnalysis.ipynb  QLBM-1D3Q.ipynb  QLBM-D1Q3.ipynb  QLBM-D2Q9.ipynb  QLBM-Generic.ipynb  QLBM.ipynb  README.md  Troubleshoot.ipynb  flake.nix  pyproject.toml  qlbmlib.py  requirements.txt  test.ipynb
old_experiments/: CircuitVisualization.ipynb  Experiment1D.ipynb  Experiment2DCross.ipynb  Experiment3D.ipynb
papers/disertation/master/: .gitignore  thesis.cs.pub.ro.cls  thesis.tex
papers/disertation/master/presentation/: defense.tex
papers/disertation/master/src/: global.tex  main.bib  main.tex
papers/disertation/master/src/appendix/: controlled_comparison.tex  index.tex  proofs.tex  rmse.tex  rmse_analysis.tex
papers/disertation/master/src/base/: abstract.tex  acknowledgements.tex  (+1 more)
papers/disertation/master/template/: titlepage.en.tex  titlepage.ro.tex
papers/sem1/: QCMasterResearchReport1.tex  sota.bib
papers/sem2/: sn-article.tex  sn-bibliography.bib
papers/sem3/: elsarticle-template-harv.tex  references.bib  report.tex
qlbm/: __init__.py  analysis.py  circuits.py  initial_conditions.py  physics.py  simulate.py  visualization.py
qlbm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+7 files in other folders)
